--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,10 +1,9 @@
 @import "bootstrap";
 
-/* mixins, variables, etc. */
-
-$grayMediumLight: #eaeaea;
-
 /* universal */
+
+$lightGray: #999;
+$grayMediumLight: #eaeaea;
 
 html {
   overflow-y: scroll;
@@ -48,7 +47,7 @@ h2 {
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: $grayLight;
+  color: $lightGray;
 }
 
 p {
@@ -56,21 +55,20 @@ p {
   line-height: 1.7em;
 }
 
-
 /* header */
 
 #logo {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
-  color: white;
+  color: #fff;
   text-transform: uppercase;
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
   line-height: 1;
   &:hover {
-    color: white;
+    color: #fff;
     text-decoration: none;
   }
 }
@@ -81,11 +79,11 @@ footer {
   margin-top: 45px;
   padding-top: 5px;
   border-top: 1px solid $grayMediumLight;
-  color: $grayLight;
+  color: $lightGray;
   a {
-    color: $gray;
+    color: #555;
     &:hover {
-      color: $grayDarker;
+      color: #222;
     }
   }
   small {
@@ -99,3 +97,6 @@ footer {
       margin-left: 10px;
     }
   }
+}
+
+
