--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,13 @@
 	<%= render 'layouts/header' %>
 
 		<div class="container">
+		<% flash.each do |key, value| %>
+        	<div class="alert alert-<%= key %>"><%= value %></div>
+      	<% end %>
+      	
 			<%= yield %>
-	<%= render 'layouts/footer' %>
+	<%= render 'layouts/footer' %><br/>
+	<%= debug(params) if Rails.env.development? %>
 		</div>
 
 	
