Finish sign_ in

--- a/app/assets/stylesheets/ras.css.scss
+++ b/app/assets/stylesheets/ras.css.scss
@@ -159,6 +159,10 @@ input {
   height: auto !important;
 }
 
+// .alert {
+//   background-color: red;
+// }
+
 #error_explanation {
   color: #f00;
   ul {
