--- a/app/assets/stylesheets/ras.css.scss
+++ b/app/assets/stylesheets/ras.css.scss
@@ -218,5 +218,12 @@ aside {
     margin-bottom: 5px;
   }
 }
+/* micropost jQuery countdown */
+
+.countdown {
+  display: inline;
+  padding-left: 30px;
+  color: $grayLight;
+}
 
 
