--- a/app/views/shared/_signed_in.html.erb
+++ b/app/views/shared/_signed_in.html.erb
@@ -4,11 +4,14 @@
         <%= render 'shared/user_info' %>
       </section>
       <section>
+        <%= render 'shared/stats' %>
+      </section>
+      <section>
         <%= render 'shared/micropost_form' %>
       </section>
+       <span class="countdown"></span>
     </aside>
      <div class="span8">
-      <h3>Micropost Feed</h3>
       <%= render 'shared/feed' %>
     </div>
 </div>
